1. GameObject 및 Component 구현 중
2. Level 에 Gameobject 들을 넣고 동적하는 구조로 변경

--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="ComponentUI.h" />
     <ClInclude Include="Content.h" />
     <ClInclude Include="FlipBookComUI.h" />
+    <ClInclude Include="Light2DUI.h" />
     <ClInclude Include="ListUI.h" />
     <ClInclude Include="MeshRenderUI.h" />
     <ClInclude Include="ParticleSystemUI.h" />
@@ -183,6 +184,7 @@
     <ClCompile Include="ComponentUI.cpp" />
     <ClCompile Include="Content.cpp" />
     <ClCompile Include="FlipBookComUI.cpp" />
+    <ClCompile Include="Light2DUI.cpp" />
     <ClCompile Include="ListUI.cpp" />
     <ClCompile Include="MeshRenderUI.cpp" />
     <ClCompile Include="ParticleSystemUI.cpp" />
