--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClInclude Include="CDevice.h">
       <Filter>03. Device</Filter>
     </ClInclude>
-    <ClInclude Include="Temp.h" />
     <ClInclude Include="CPathMgr.h">
       <Filter>04. Manager\01. PathMgr</Filter>
     </ClInclude>
@@ -143,6 +142,9 @@
     <ClInclude Include="CCameraMoveScript.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="CLight2D.h">
+      <Filter>08. Component\08. Light2D</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
@@ -157,7 +159,6 @@
     <ClCompile Include="CDevice.cpp">
       <Filter>03. Device</Filter>
     </ClCompile>
-    <ClCompile Include="Temp.cpp" />
     <ClCompile Include="CPathMgr.cpp">
       <Filter>04. Manager\01. PathMgr</Filter>
     </ClCompile>
@@ -265,6 +266,9 @@
     </ClCompile>
     <ClCompile Include="CCameraMoveScript.cpp">
       <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="CLight2D.cpp">
+      <Filter>08. Component\08. Light2D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -418,6 +422,9 @@
     <Filter Include="03. Device\StructuredBuffer">
       <UniqueIdentifier>{2c64435a-b268-4470-892a-0aa4001d716a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="08. Component\08. Light2D">
+      <UniqueIdentifier>{b3759e60-16ed-4c4b-b3ba-4d26c7956c89}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="func.fx">
@@ -434,6 +441,9 @@
     </FxCompile>
     <FxCompile Include="tilemap.fx">
       <Filter>HLSL\02. Render</Filter>
+    </FxCompile>
+    <FxCompile Include="struct.fx">
+      <Filter>HLSL\01. Header</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
