1. CAsset 용 스마트 포인터 추가   - 모든 에셋들은 이제 Ptr<Type> 을 이용해서 가리켜야 한다.   - 레퍼런스 카운트가 0이 되면 Asset 이 스스로 삭제되도록 변경

--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClInclude Include="CLight2D.h">
       <Filter>08. Component\08. Light2D</Filter>
     </ClInclude>
+    <ClInclude Include="ptr.h">
+      <Filter>06. Asset</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
