--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AssetUI.h" />
     <ClInclude Include="CameraUI.h" />
     <ClInclude Include="CEditorCameraScript.h" />
     <ClInclude Include="CEditorMgr.h" />
@@ -149,12 +150,22 @@
     <ClInclude Include="Client.h" />
     <ClInclude Include="Collider2DUI.h" />
     <ClInclude Include="ComponentUI.h" />
+    <ClInclude Include="ComputeShaderUI.h" />
     <ClInclude Include="Content.h" />
     <ClInclude Include="FlipBookComUI.h" />
+    <ClInclude Include="FlipBookUI.h" />
+    <ClInclude Include="GraphicShaderUI.h" />
     <ClInclude Include="Light2DUI.h" />
     <ClInclude Include="ListUI.h" />
+    <ClInclude Include="MaterialUI.h" />
+    <ClInclude Include="MeshDataUI.h" />
     <ClInclude Include="MeshRenderUI.h" />
+    <ClInclude Include="MeshUI.h" />
     <ClInclude Include="ParticleSystemUI.h" />
+    <ClInclude Include="PrefabUI.h" />
+    <ClInclude Include="SoundUI.h" />
+    <ClInclude Include="SpriteUI.h" />
+    <ClInclude Include="TextureUI.h" />
     <ClInclude Include="TileMapUI.h" />
     <ClInclude Include="TransformUI.h" />
     <ClInclude Include="EditorUI.h" />
@@ -172,8 +183,10 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TreeUI.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AssetUI.cpp" />
     <ClCompile Include="CameraUI.cpp" />
     <ClCompile Include="CEditorCameraScript.cpp" />
     <ClCompile Include="CEditorMgr.cpp" />
@@ -182,12 +195,23 @@
     <ClCompile Include="CEditorMgr_EditorObject.cpp" />
     <ClCompile Include="Collider2DUI.cpp" />
     <ClCompile Include="ComponentUI.cpp" />
+    <ClCompile Include="ComputeShaderUI.cpp" />
     <ClCompile Include="Content.cpp" />
     <ClCompile Include="FlipBookComUI.cpp" />
+    <ClCompile Include="FlipBookUI.cpp" />
+    <ClCompile Include="GraphicShaderUI.cpp" />
+    <ClCompile Include="Inspector_Init.cpp" />
     <ClCompile Include="Light2DUI.cpp" />
     <ClCompile Include="ListUI.cpp" />
+    <ClCompile Include="MaterialUI.cpp" />
+    <ClCompile Include="MeshDataUI.cpp" />
     <ClCompile Include="MeshRenderUI.cpp" />
+    <ClCompile Include="MeshUI.cpp" />
     <ClCompile Include="ParticleSystemUI.cpp" />
+    <ClCompile Include="PrefabUI.cpp" />
+    <ClCompile Include="SoundUI.cpp" />
+    <ClCompile Include="SpriteUI.cpp" />
+    <ClCompile Include="TextureUI.cpp" />
     <ClCompile Include="TileMapUI.cpp" />
     <ClCompile Include="TransformUI.cpp" />
     <ClCompile Include="EditorUI.cpp" />
@@ -205,6 +229,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TreeUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc" />
