--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Light2DUI.h" />
     <ClInclude Include="ListUI.h" />
     <ClInclude Include="MaterialUI.h" />
+    <ClInclude Include="MenuUI.h" />
     <ClInclude Include="MeshDataUI.h" />
     <ClInclude Include="MeshRenderUI.h" />
     <ClInclude Include="MeshUI.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="Light2DUI.cpp" />
     <ClCompile Include="ListUI.cpp" />
     <ClCompile Include="MaterialUI.cpp" />
+    <ClCompile Include="MenuUI.cpp" />
     <ClCompile Include="MeshDataUI.cpp" />
     <ClCompile Include="MeshRenderUI.cpp" />
     <ClCompile Include="MeshUI.cpp" />
