--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -280,6 +280,7 @@ call EngineHeaderCopy.bat</Command>
   <ItemGroup>
     <FxCompile Include="debug.fx" />
     <FxCompile Include="func.fx" />
+    <FxCompile Include="postprocess.fx" />
     <FxCompile Include="std2d.fx">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
