--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -431,6 +431,15 @@
     <Filter Include="08. Component\08. Light2D">
       <UniqueIdentifier>{b3759e60-16ed-4c4b-b3ba-4d26c7956c89}</UniqueIdentifier>
     </Filter>
+    <Filter Include="HLSL\02. Render\01. 2D">
+      <UniqueIdentifier>{309e0dc3-a2d9-484b-a358-7546679e8954}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HLSL\02. Render\02. 3D">
+      <UniqueIdentifier>{c2bb6ea6-8bbb-4098-92b3-5e47e2e3cb32}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HLSL\02. Render\03.PostProcess">
+      <UniqueIdentifier>{2b0ac7b1-f672-4d20-967d-ac68b28d1f48}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="func.fx">
@@ -439,17 +448,20 @@
     <FxCompile Include="value.fx">
       <Filter>HLSL\01. Header</Filter>
     </FxCompile>
-    <FxCompile Include="debug.fx">
-      <Filter>HLSL\02. Render</Filter>
-    </FxCompile>
-    <FxCompile Include="std2d.fx">
-      <Filter>HLSL\02. Render</Filter>
-    </FxCompile>
-    <FxCompile Include="tilemap.fx">
-      <Filter>HLSL\02. Render</Filter>
-    </FxCompile>
     <FxCompile Include="struct.fx">
       <Filter>HLSL\01. Header</Filter>
+    </FxCompile>
+    <FxCompile Include="debug.fx">
+      <Filter>HLSL\02. Render\01. 2D</Filter>
+    </FxCompile>
+    <FxCompile Include="std2d.fx">
+      <Filter>HLSL\02. Render\01. 2D</Filter>
+    </FxCompile>
+    <FxCompile Include="tilemap.fx">
+      <Filter>HLSL\02. Render\01. 2D</Filter>
+    </FxCompile>
+    <FxCompile Include="postprocess.fx">
+      <Filter>HLSL\02. Render\03.PostProcess</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
