1. 정점에 UV 데이터 추가   - RectMesh 만들 때 각 정점에 알맞은 UV 값을 입력해둠   - GraphicShader 에서 Layout 만들 때 UV 위치 기록
2. TestShader 에서 Texture 레지스터 선언 후 텍스쳐 바인딩을 받도록 함
  - 픽셀 쉐이더를 바인딩된 텍스쳐에서 색상을 샘플링해서 반환하도록 변경

--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="ComponentUI.h" />
     <ClInclude Include="ComputeShaderUI.h" />
     <ClInclude Include="Content.h" />
+    <ClInclude Include="CTestLevel.h" />
     <ClInclude Include="FlipBookComUI.h" />
     <ClInclude Include="FlipBookUI.h" />
     <ClInclude Include="GraphicShaderUI.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="ComponentUI.cpp" />
     <ClCompile Include="ComputeShaderUI.cpp" />
     <ClCompile Include="Content.cpp" />
+    <ClCompile Include="CTestLevel.cpp" />
     <ClCompile Include="FlipBookComUI.cpp" />
     <ClCompile Include="FlipBookUI.cpp" />
     <ClCompile Include="GraphicShaderUI.cpp" />
