--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -101,7 +101,7 @@
       <Filter>04. Manager\06. RenderMgr</Filter>
     </ClInclude>
     <ClInclude Include="CScript.h">
-      <Filter>08. Component\SCript</Filter>
+      <Filter>08. Component\Script</Filter>
     </ClInclude>
     <ClInclude Include="CPlayerScript.h">
       <Filter>Scripts</Filter>
@@ -226,7 +226,7 @@
       <Filter>04. Manager\06. RenderMgr</Filter>
     </ClCompile>
     <ClCompile Include="CScript.cpp">
-      <Filter>08. Component\SCript</Filter>
+      <Filter>08. Component\Script</Filter>
     </ClCompile>
     <ClCompile Include="CPlayerScript.cpp">
       <Filter>Scripts</Filter>
@@ -404,9 +404,6 @@
     <Filter Include="04. Manager\06. RenderMgr">
       <UniqueIdentifier>{b4b30c14-426e-4567-bf29-7571f2cffc86}</UniqueIdentifier>
     </Filter>
-    <Filter Include="08. Component\SCript">
-      <UniqueIdentifier>{cce1c078-d96f-47c5-82dd-eb035181c994}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Scripts">
       <UniqueIdentifier>{67960eda-1222-4028-96df-1892dd26dd5f}</UniqueIdentifier>
     </Filter>
@@ -439,6 +436,9 @@
     </Filter>
     <Filter Include="HLSL\02. Render\03.PostProcess">
       <UniqueIdentifier>{2b0ac7b1-f672-4d20-967d-ac68b28d1f48}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component\Script">
+      <UniqueIdentifier>{cce1c078-d96f-47c5-82dd-eb035181c994}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
