--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -199,11 +199,14 @@ call EngineHeaderCopy.bat</Command>
     <ClInclude Include="CMeshRender.h" />
     <ClInclude Include="CMissileScript.h" />
     <ClInclude Include="components.h" />
+    <ClInclude Include="CParticleSystem.h" />
     <ClInclude Include="CPathMgr.h" />
     <ClInclude Include="CPlayerScript.h" />
+    <ClInclude Include="CPrefab.h" />
     <ClInclude Include="CRenderComponent.h" />
     <ClInclude Include="CRenderMgr.h" />
     <ClInclude Include="CScript.h" />
+    <ClInclude Include="CSetColorCS.h" />
     <ClInclude Include="CShader.h" />
     <ClInclude Include="CSprite.h" />
     <ClInclude Include="CStructuredBuffer.h" />
@@ -252,11 +255,14 @@ call EngineHeaderCopy.bat</Command>
     <ClCompile Include="CMesh.cpp" />
     <ClCompile Include="CMeshRender.cpp" />
     <ClCompile Include="CMissileScript.cpp" />
+    <ClCompile Include="CParticleSystem.cpp" />
     <ClCompile Include="CPathMgr.cpp" />
     <ClCompile Include="CPlayerScript.cpp" />
+    <ClCompile Include="CPrefab.cpp" />
     <ClCompile Include="CRenderComponent.cpp" />
     <ClCompile Include="CRenderMgr.cpp" />
     <ClCompile Include="CScript.cpp" />
+    <ClCompile Include="CSetColorCS.cpp" />
     <ClCompile Include="CShader.cpp" />
     <ClCompile Include="CSprite.cpp" />
     <ClCompile Include="CStructuredBuffer.cpp" />
@@ -270,6 +276,7 @@ call EngineHeaderCopy.bat</Command>
     <ClCompile Include="CTransform.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="extern.cpp" />
+    <ClCompile Include="func.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -278,6 +285,7 @@ call EngineHeaderCopy.bat</Command>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="setcolor.fx" />
     <FxCompile Include="debug.fx" />
     <FxCompile Include="func.fx" />
     <FxCompile Include="postprocess.fx" />
