--- a/Project/Scripts/Scripts.vcxproj
+++ b/Project/Scripts/Scripts.vcxproj
@@ -132,7 +132,10 @@
     </Link>
     <PreBuildEvent>
       <Command>cd $(SolutionDir)
-call ScriptsHeaderCopy.bat</Command>
+call ScriptsHeaderCopy.bat
+cd $(SolutionDir)CodeGen\
+call CodeGen.exe
+</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -156,7 +159,10 @@ call ScriptsHeaderCopy.bat</Command>
     </Link>
     <PreBuildEvent>
       <Command>cd $(SolutionDir)
-call ScriptsHeaderCopy.bat</Command>
+call ScriptsHeaderCopy.bat
+cd $(SolutionDir)CodeGen\
+call CodeGen.exe
+</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
