--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -190,7 +190,11 @@
     <ClInclude Include="ParticleSystemUI.h" />
     <ClInclude Include="PrefabUI.h" />
     <ClInclude Include="ScriptUI.h" />
+    <ClInclude Include="SE_AtlasView.h" />
+    <ClInclude Include="SE_Detail.h" />
+    <ClInclude Include="SE_Sub.h" />
     <ClInclude Include="SoundUI.h" />
+    <ClInclude Include="SpriteEditor.h" />
     <ClInclude Include="SpriteUI.h" />
     <ClInclude Include="TextureUI.h" />
     <ClInclude Include="TileMapUI.h" />
@@ -261,7 +265,11 @@
     <ClCompile Include="ParticleSystemUI.cpp" />
     <ClCompile Include="PrefabUI.cpp" />
     <ClCompile Include="ScriptUI.cpp" />
+    <ClCompile Include="SE_AtlasView.cpp" />
+    <ClCompile Include="SE_Detail.cpp" />
+    <ClCompile Include="SE_Sub.cpp" />
     <ClCompile Include="SoundUI.cpp" />
+    <ClCompile Include="SpriteEditor.cpp" />
     <ClCompile Include="SpriteUI.cpp" />
     <ClCompile Include="TextureUI.cpp" />
     <ClCompile Include="TileMapUI.cpp" />
