--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -109,14 +109,35 @@
     <Filter Include="EditorUI\07. Module">
       <UniqueIdentifier>{f52bfcc3-5ce2-4801-9fcf-d3c75515669b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EditorUI\08. FilpBookEditorUI">
-      <UniqueIdentifier>{09f5235f-63e5-4c43-8cea-c976769fe376}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Manager\03. LevelSaveLoad">
       <UniqueIdentifier>{bf44a06f-939b-4c02-bdfa-7776fd9c585f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EditorUI\09. TileMapEditorUI">
+    <Filter Include="EditorUI\09. FilpBookEditor">
+      <UniqueIdentifier>{09f5235f-63e5-4c43-8cea-c976769fe376}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\10. TileMapEditor">
       <UniqueIdentifier>{6aabbcca-055d-4301-a5a3-0ca67f6cc0d8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\08. SpriteEditor">
+      <UniqueIdentifier>{6744b96e-de0b-4ddd-8a43-5a4ed98b0e97}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\08. SpriteEditor\SE_Sub">
+      <UniqueIdentifier>{db3bac02-3fda-4314-bcb2-3d55c6097ffa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\08. SpriteEditor\SE_Sub\SE_Detail">
+      <UniqueIdentifier>{cd58ca26-78b2-4464-83fc-6d0d20b132ec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\08. SpriteEditor\SE_Sub\SE_AtlasView">
+      <UniqueIdentifier>{0f94d33e-54e6-42c2-b5e4-e3f9d4fa2d41}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\09. FilpBookEditor\FE_Sub">
+      <UniqueIdentifier>{0e32c364-61a3-4f5f-a9c9-e835b8d79ea1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\09. FilpBookEditor\FE_Sub\FE_Detail">
+      <UniqueIdentifier>{27b31243-6190-4e16-a6f7-aea57d608c01}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="EditorUI\09. FilpBookEditor\FE_Sub\FE_AtlasView">
+      <UniqueIdentifier>{51ad5823-b97d-47e8-93fa-536e617b43c5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -259,22 +280,34 @@
       <Filter>EditorUI\07. Module</Filter>
     </ClInclude>
     <ClInclude Include="FlipBookEditor.h">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
-    </ClInclude>
-    <ClInclude Include="FE_FBDetail.h">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
-    </ClInclude>
-    <ClInclude Include="FE_FBViewer.h">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
+      <Filter>EditorUI\09. FilpBookEditor</Filter>
     </ClInclude>
     <ClInclude Include="FE_SpriteList.h">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
-    </ClInclude>
-    <ClInclude Include="FE_Sub.h">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
+      <Filter>EditorUI\09. FilpBookEditor</Filter>
     </ClInclude>
     <ClInclude Include="CLevelSaveLoad.h">
       <Filter>Manager\03. LevelSaveLoad</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteEditor.h">
+      <Filter>EditorUI\08. SpriteEditor</Filter>
+    </ClInclude>
+    <ClInclude Include="SE_Sub.h">
+      <Filter>EditorUI\08. SpriteEditor\SE_Sub</Filter>
+    </ClInclude>
+    <ClInclude Include="SE_AtlasView.h">
+      <Filter>EditorUI\08. SpriteEditor\SE_Sub\SE_AtlasView</Filter>
+    </ClInclude>
+    <ClInclude Include="SE_Detail.h">
+      <Filter>EditorUI\08. SpriteEditor\SE_Sub\SE_Detail</Filter>
+    </ClInclude>
+    <ClInclude Include="FE_Sub.h">
+      <Filter>EditorUI\09. FilpBookEditor\FE_Sub</Filter>
+    </ClInclude>
+    <ClInclude Include="FE_FBDetail.h">
+      <Filter>EditorUI\09. FilpBookEditor\FE_Sub\FE_Detail</Filter>
+    </ClInclude>
+    <ClInclude Include="FE_FBViewer.h">
+      <Filter>EditorUI\09. FilpBookEditor\FE_Sub\FE_AtlasView</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -420,22 +453,34 @@
       <Filter>EditorUI\07. Module</Filter>
     </ClCompile>
     <ClCompile Include="FlipBookEditor.cpp">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
-    </ClCompile>
-    <ClCompile Include="FE_FBDetail.cpp">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
-    </ClCompile>
-    <ClCompile Include="FE_FBViewer.cpp">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
+      <Filter>EditorUI\09. FilpBookEditor</Filter>
     </ClCompile>
     <ClCompile Include="FE_SpriteList.cpp">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
-    </ClCompile>
-    <ClCompile Include="FE_Sub.cpp">
-      <Filter>EditorUI\08. FilpBookEditorUI</Filter>
+      <Filter>EditorUI\09. FilpBookEditor</Filter>
     </ClCompile>
     <ClCompile Include="CLevelSaveLoad.cpp">
       <Filter>Manager\03. LevelSaveLoad</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteEditor.cpp">
+      <Filter>EditorUI\08. SpriteEditor</Filter>
+    </ClCompile>
+    <ClCompile Include="SE_Sub.cpp">
+      <Filter>EditorUI\08. SpriteEditor\SE_Sub</Filter>
+    </ClCompile>
+    <ClCompile Include="SE_AtlasView.cpp">
+      <Filter>EditorUI\08. SpriteEditor\SE_Sub\SE_AtlasView</Filter>
+    </ClCompile>
+    <ClCompile Include="SE_Detail.cpp">
+      <Filter>EditorUI\08. SpriteEditor\SE_Sub\SE_Detail</Filter>
+    </ClCompile>
+    <ClCompile Include="FE_Sub.cpp">
+      <Filter>EditorUI\09. FilpBookEditor\FE_Sub</Filter>
+    </ClCompile>
+    <ClCompile Include="FE_FBDetail.cpp">
+      <Filter>EditorUI\09. FilpBookEditor\FE_Sub\FE_Detail</Filter>
+    </ClCompile>
+    <ClCompile Include="FE_FBViewer.cpp">
+      <Filter>EditorUI\09. FilpBookEditor\FE_Sub\FE_AtlasView</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
